--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 					<span class="icon solid major fa-cloud"></span>
 					<h1>Hi, I'm <strong>Jessica</strong>, another fine<br />
 					little Human from Calgary.</h1>
-					<p>Accumsan feugiat mi commodo erat lorem ipsum, sed magna<br />
-					lobortis feugiat sapien sed etiam volutpat accumsan.</p>
+					<p>Come check out my webpage its pretty amazing!</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Discover</a></li>
 					</ul>
